--- a/public/stylesheets/stylus/styles.styl
+++ b/public/stylesheets/stylus/styles.styl
@@ -47,11 +47,11 @@ body
 	margin: 0
 	font-size: 13px
 	line-height: 1.231
-	background-color: #3c3c3c
+	background-color: #0E0E0E
 
 body, button, input, select, textarea
 	font-family: sans-serif
-	color: #FFF
+	color: #2c2c2c
 
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
@@ -74,10 +74,10 @@ body, button, input, select, textarea
  ========================================================================== */
 
 a
-	color: #00e
+	color: #DD013f
 
 a:visited
-	color: #551a8b
+	color: #DD013f
 
 a:hover
 	color: #06e
@@ -237,6 +237,7 @@ button, input, select, textarea
 	margin: 0
 	vertical-align: baseline
 	*vertical-align: middle
+	width: 100%
 
 /*
  * 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
@@ -295,7 +296,7 @@ textarea
 input:valid, textarea:valid
 
 input:invalid, textarea:invalid
-	background-color: #f0dddd
+	background-color: #ccc
 
 /* =============================================================================
  Tables
@@ -444,15 +445,17 @@ td
 #container
 	margin-left auto
 	margin-right auto
-	width 1024px
+	width 700px
 
 #header 
-	width 1024px
+	width 700px
 	position relative
 	float left
+	margin-top: 10px
+	margin-bottom 20px
 
 #content 
-	width: 800px
+	width: 700px
 	position: relative
 
 #loginStatus 
@@ -466,7 +469,20 @@ td
 	background-color: #1B1B1B;
 	padding: 10px;
 	margin-bottom: 3px;
+	color: #FFF
 
+.title
+	font-family: 'Electrolize', sans-serif;
+	font-size: 18px
+	color: #DD013f
+
+.votes
+	font-family: 'Electrolize', sans-serif;
+	font-size: 18px
+	color: #DD013f
+	font-weight: bold
+	background-color: #2c2c2c
+	padding: 5px
 
 
 
