--- a/app/src/server/views/layout.jade
+++ b/app/src/server/views/layout.jade
@@ -4,6 +4,7 @@ html
 		title= title
 		link(rel='stylesheet', href='/assets/all.css')
 		link(rel='stylesheet', href='/assets/vendor.css')
+		link(href='http://fonts.googleapis.com/css?family=Electrolize', rel='stylesheet', type='text/css')
 		script(src='/assets/vendor.js')
 		script(src='/assets/backbone.js')
 		script(src='/assets/templates.jst')
