added Cakefile for auto compilation of Jade/Stylus/CoffeeScript/JS/CSS

--- a/app/src/server/views/index.jade
+++ b/app/src/server/views/index.jade
@@ -2,6 +2,8 @@ div#left
 
 div#right
 
+div#wrapper
+
 script
 	var videos = new App.Collections.Videos();
 	videos.fetch({
@@ -17,6 +19,7 @@ script
 			});		
 		}
 	});
+
 
 
 
