--- a/app/src/server/views/layout.jade
+++ b/app/src/server/views/layout.jade
@@ -5,9 +5,8 @@ html
 		link(rel='stylesheet', href='/assets/all.css')
 		link(rel='stylesheet', href='/assets/vendor.css')
 		link(href='http://fonts.googleapis.com/css?family=Electrolize', rel='stylesheet', type='text/css')
-		script(src='/assets/vendor.js')
-		script(src='/assets/backbone.js')
-		script(src='/assets/templates.jst')
+		script(src='/assets/app.js')
+		script(src='/assets/templates.js')
 	body
 		div#container 
 			div#header 
