--- a/app/src/server/views/layout.jade
+++ b/app/src/server/views/layout.jade
@@ -11,7 +11,7 @@ html
 		div#container 
 			div#header 
 				a(href='/')
-					img(src='/images/redbull.png')
+					img(src='/images/logo.png')
 				div#loginStatus
 					- if(everyauth.loggedIn)
 						img(src="http://graph.facebook.com/#{everyauth.facebook.user.id}/picture", style='border: solid 1px #ccc')
